objects/JENKINS/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins2
  namespace: portic-devops
spec:
  clusterIP: 10.217.4.35
  clusterIPs:
  - 10.217.4.35
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: jenkins2
  sessionAffinity: ClientIP
  type: ClusterIP
